Add grid example.

--- a/barebone.html
+++ b/barebone.html
@@ -2,16 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>Bootstrap 101 Template</title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
-        <script type="text/javascript" src="../../assest/js/html5shiv.js"></script>
-        <script type="text/javascript" src="../../assest/js/respond.min.js"></script>
+        <script type="text/javascript" src="js/html5shiv.js"></script>
+        <script type="text/javascript" src="js/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
     <h1>Hello World!</h1>
-    <script type="text/javascript" src="//code.jquery.com/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/jquery/jquery.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
